commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1466,14 +1466,14 @@ body {
   .ProblemListDashboardBorder .table th,
   .table td {
     padding: 0.75rem;
-    vertical-align: top;
+    vertical-align: middle;
     border-top: 0px solid transparent !important;
   }
 
   .ProblemListDashboardBorder .table th,
   .table td {
     padding: 0.75rem;
-    vertical-align: top;
+    vertical-align: middle;
     border-top: 0px solid transparent !important;
   }
 
@@ -14974,7 +14974,7 @@ label.arrow_label:before {
 .ProblemListDashboardBorder .table th,
 .table td {
   padding: 0.75rem;
-  vertical-align: top;
+  vertical-align: middle;
   border-top: 0px solid #c8ced3 !important;
 }
 
