--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16668,7 +16668,7 @@ label.arrow_label:before {
 -------------------------------------------------------- */
 .cssProgress {
   width: 100%;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 }
 
 .cssProgress .progress1,
