--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16606,3 +16606,17 @@ label.arrow_label:before {
     height: 412px;
   }
 }
+.FreezePlaningUnitColumn1 .jss>tbody>tr:nth-child(odd)>td:nth-child(2).readonly {
+  width: 200px !important;
+  left: 0 !important;
+  z-index: 2 !important;
+  position: sticky !important;
+  background: #cfcdc9 !important;
+}
+.FreezePlaningUnitColumn1 .jss>tbody>tr:nth-child(even)>td:nth-child(2).readonly {
+  width: 200px !important;
+  left: 0 !important;
+  z-index: 2 !important;
+  position: sticky !important;
+  background: #cfcdc9 !important;
+}
