commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3318,7 +3318,7 @@ body {
     z-index: 2 !important;
     position: sticky !important;
     background: #212631 !important;
-    color: #e4e5e6 !important;
+    // color: #e4e5e6 !important;
   }
 
   .FreezePlaningUnitColumn1 .jss>tbody>tr:nth-child(even)>td:nth-child(2) {
@@ -3327,7 +3327,7 @@ body {
     z-index: 2 !important;
     position: sticky !important;
     background: #373c46 !important;
-    color: #e4e5e6 !important;
+    // color: #e4e5e6 !important;
   }
 
   .DashboardBg {
