--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -167,7 +167,7 @@ body {
   text-overflow: ellipsis;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 1!important;
   background-repeat: no-repeat;
   background-position: center right 0;
   line-height: 1em;
@@ -523,7 +523,7 @@ label.arrow_label:before {
     text-overflow: ellipsis;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 1!important;
     background-repeat: no-repeat;
     background-position: center right 0;
     line-height: 1em;
@@ -933,7 +933,7 @@ label.arrow_label:before {
     text-overflow: ellipsis;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 1!important;
     background-repeat: no-repeat;
     background-position: center right 0;
     line-height: 1em;
