commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17995,3 +17995,6 @@ label.arrow_label:before {
   position: sticky !important;
   background: #cfcdc9 !important;
 }
+.DashboardBg1 .tableFixHeadDash thead th {  
+  top: -2px!important;  
+}
