--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1228,7 +1228,7 @@ label {
     text-overflow: ellipsis;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 1!important;
     background-repeat: no-repeat;
     background-position: center right 0;
     line-height: 1em;
