--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17366,19 +17366,19 @@ label.arrow_label:before {
 .dashboardTable2 .jss_content {
   // max-height: calc(100vh - 393px) !important;
   // height: 375px;
-  max-height: calc(100vh - 412px) !important;
+  max-height: calc(100vh - 66vh) !important;
   overflow: auto;
 }
 .dashboardTable2E .jss_content {
   // max-height: calc(100vh - 393px) !important;
   // height: 375px;
   // max-height: calc(100vh - 73vh) !important;
-  max-height: calc(100vh - 481px) !important;
+  max-height: calc(100vh - 76vh) !important;
   overflow: auto;
 }
 .dashboardTable3 .jss_content{
     // max-height: calc(100vh - 46vh) !important;
-    max-height: calc(100vh - 385px) !important;
+    max-height: calc(100vh - 64vh) !important;
     overflow: auto;
 }
 .CustomHeight {
