--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17588,7 +17588,7 @@ label.arrow_label:before {
   // height: 300px !important;
   // width: 300px !important;
   margin: 0 auto;
-  padding-left: 20px;
+  // padding-left: 20px;
 }
 
 .CursorDrag .jss>thead>tr>td:nth-child(2) {
