--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3051,24 +3051,24 @@ a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
   color: #e4e5e6;
   text-decoration: none;
 }
-.FreezePlaningUnitColumn1 .jss > tbody > tr:nth-child(odd) > td:nth-child(2)
-  {
-  width: 200px !important;
-  left: 0 !important;
-  z-index: 2 !important;
-  position: sticky !important;
-  background: #212631 !important;
-  color: #e4e5e6!important;
-  }
-  .FreezePlaningUnitColumn1 .jss > tbody > tr:nth-child(even) > td:nth-child(2)
-  {
-  width: 200px !important;
-  left: 0 !important;
-  z-index: 2 !important;
-  position: sticky !important;
-  background: #373c46 !important;
-  color: #e4e5e6!important;
-  }
+// .FreezePlaningUnitColumn1 .jss > tbody > tr:nth-child(odd) > td:nth-child(2)
+//   {
+//   width: 200px !important;
+//   left: 0 !important;
+//   z-index: 2 !important;
+//   position: sticky !important;
+//   background: #212631 !important;
+//   color: #e4e5e6!important;
+//   }
+//   .FreezePlaningUnitColumn1 .jss > tbody > tr:nth-child(even) > td:nth-child(2)
+//   {
+//   width: 200px !important;
+//   left: 0 !important;
+//   z-index: 2 !important;
+//   position: sticky !important;
+//   background: #373c46 !important;
+//   color: #e4e5e6!important;
+//   }
   .jss_border_main {
     border: 1px solid #e4e5e6;
     background-color: #00000010;
@@ -3087,6 +3087,45 @@ a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
     box-sizing: initial;
     z-index: 999;
     padding: 2px;
+  }
+  .FreezePlaningUnitColumn1New .jss > tbody > tr:nth-child(odd) > td:nth-child(2) {
+    width: 200px !important;
+    left: 0 !important;
+    z-index: 2 !important;
+    position: sticky !important;
+    background: #212631 !important;
+    background-repeat: no-repeat !important;
+    background-position: top 50% right 5px !important;
+    background-image: url('data:image/svg+xml;base64,CjxzdmcgeG1sbnM9J2h0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnJyB3aWR0aD0nMjQnIGhlaWdodD0nMjQnIHZpZXdCb3g9JzAgMCAyNCAyNCc+PHBhdGggZmlsbD0nbm9uZScgZD0nTTAgMGgyNHYyNEgwVjB6Jy8+PHBhdGggZD0nTTcgMTBsNSA1IDUtNUg3eicgZmlsbD0nbGlnaHRncmF5Jy8+PC9zdmc+')!important;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    padding-right: 16px;
+  }
+  .FreezePlaningUnitColumn1New .jss > tbody > tr:nth-child(even) > td:nth-child(2) {
+      width: 200px !important;
+      left: 0 !important;
+      z-index: 2 !important;
+      position: sticky !important;
+      background: #373c46 !important;
+      background-repeat: no-repeat !important;
+    background-position: top 50% right 5px !important;
+    background-image: url('data:image/svg+xml;base64,CjxzdmcgeG1sbnM9J2h0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnJyB3aWR0aD0nMjQnIGhlaWdodD0nMjQnIHZpZXdCb3g9JzAgMCAyNCAyNCc+PHBhdGggZmlsbD0nbm9uZScgZD0nTTAgMGgyNHYyNEgwVjB6Jy8+PHBhdGggZD0nTTcgMTBsNSA1IDUtNUg3eicgZmlsbD0nbGlnaHRncmF5Jy8+PC9zdmc+')!important;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    padding-right: 16px;
+  }
+  .FreezePlaningUnitColumn1New .jss_overflow > tbody > tr > td:nth-child(3) {
+    width: 300px !important;
+    left: 149px !important;
+    z-index: 2 !important;
+    position: sticky !important;
+    background: #212631; 
+    background-repeat: no-repeat !important;
+    background-position: top 50% right 5px !important;
+    background-image: url('data:image/svg+xml;base64,CjxzdmcgeG1sbnM9J2h0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnJyB3aWR0aD0nMjQnIGhlaWdodD0nMjQnIHZpZXdCb3g9JzAgMCAyNCAyNCc+PHBhdGggZmlsbD0nbm9uZScgZD0nTTAgMGgyNHYyNEgwVjB6Jy8+PHBhdGggZD0nTTcgMTBsNSA1IDUtNUg3eicgZmlsbD0nbGlnaHRncmF5Jy8+PC9zdmc+')!important;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    padding-right: 16px;
   }
 // .jss>thead>tr>td.InfoTrAsteriskTheadtrTdImageShipmentFreightCost::after {
 //   content: "";
