--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -167,7 +167,7 @@ body {
   text-overflow: ellipsis;
   position: sticky;
   top: 0;
-  z-index: 1!important;
+  z-index: 1;
   background-repeat: no-repeat;
   background-position: center right 0;
   line-height: 1em;
@@ -418,7 +418,7 @@ label {
     text-overflow: ellipsis;
     position: sticky;
     top: 0;
-    z-index: 1!important;
+    z-index: 1;
     background-repeat: no-repeat;
     background-position: center right 0;
     line-height: 1em;
@@ -818,7 +818,7 @@ label {
     text-overflow: ellipsis;
     position: sticky;
     top: 0;
-    z-index: 1!important;
+    z-index: 1;
     background-repeat: no-repeat;
     background-position: center right 0;
     line-height: 1em;
@@ -1228,7 +1228,7 @@ label {
     text-overflow: ellipsis;
     position: sticky;
     top: 0;
-    z-index: 1!important;
+    z-index: 1;
     background-repeat: no-repeat;
     background-position: center right 0;
     line-height: 1em;
@@ -3677,7 +3677,7 @@ label {
   justify-content: center;
   width: 100%;
   max-width: 900px;
-  height: 53px;
+  height: 58px;
   padding: 0 10px;
   overflow: hidden;
   border: 1px solid #aaa;
@@ -3686,16 +3686,23 @@ label {
   background: #373c46;
 }
 .scroller-content div a {
-  color: #20a8d8;
+  color: #002F6C;
 }
 .scroller-content div {
   font-size: 14px;
-  line-height: 23px;
+  line-height: 20px;
   color: #e4e5e6;
   font-weight: 700;
-  padding: 0 20px;
+  padding: 4px 17px;
+  margin: 0px 5px;
   text-align: center;
   white-space: nowrap;
+  background: #a7c6ed;
+  border-radius: 10px;
+}
+.scroller-content div p {
+  margin-bottom: 0rem!important;
+  color: #fff;
 }
 .DashboardBg1 .fixTableHeadTopDashboard{
   border-top: 1px solid #4d515a!important;
@@ -17404,9 +17411,11 @@ label.arrow_label:before {
 
 .dashboardTable2 .jss_content {
   // max-height: calc(100vh - 393px) !important;
-  // height: 375px;
-  max-height: calc(100vh - 412px) !important;
+  // height: 225px;
+  // max-height: calc(100vh - 412px) !important;
   overflow: auto;
+  max-height: 215px !important;
+  min-height: 238px !important;
 }
 .dashboardTable2E .jss_content {
   // max-height: calc(100vh - 393px) !important;
@@ -17417,7 +17426,8 @@ label.arrow_label:before {
 }
 .dashboardTable3 .jss_content{
     // max-height: calc(100vh - 46vh) !important;
-    max-height: calc(100vh - 385px) !important;
+    // max-height: calc(100vh - 385px) !important;
+    height: 265px;
     overflow: auto;
 }
 .CustomHeight {
@@ -17850,7 +17860,7 @@ label.arrow_label:before {
   justify-content: center; /* Aligns content to the right */
   width: 100%; /* Full width of container */
   max-width: 900px; /* Adjust as needed */
-  height: 53px;
+  height: 58px;
   padding: 0 10px; /* Optional padding */
   overflow: hidden;
   border: 1px solid #aaa;
@@ -17868,23 +17878,31 @@ label.arrow_label:before {
 
 .scroller-content {
   display: flex;
-  padding-top: 17px;
+  // padding-top: 17px;
 }
 
 .scroller-content div {
   font-size: 14px;
-  line-height: 23px;
+  line-height: 20px;
   color: #000;
   font-weight: 700;
-  padding: 0 20px;
+  // color: #e4e5e6;
+  padding: 4px 17px;
+  margin: 0px 5px;
   text-align: center;
-  white-space: nowrap; /* Prevents text wrapping */
+  white-space: nowrap;
+  background: #a7c6ed;
+  border-radius: 10px;
+  
 }
 
 .scroller-content div a {
   color: #002F6C;
 }
-
+.scroller-content div p {
+  margin-bottom: 0rem!important;
+  color: #fff;
+}
 @keyframes scroll {
   0% {
     transform: translateX(0);
@@ -18045,7 +18063,7 @@ label.arrow_label:before {
   text-overflow: ellipsis;
   position: sticky;
   top: 0;
-  z-index: 1!important;
+  z-index: 1;
   background-repeat: no-repeat;
   background-position: center right 0;
   line-height: 1em;
@@ -18108,4 +18126,24 @@ label.arrow_label:before {
   box-sizing: initial;
   z-index: 999!important;
   padding: 2px;
+}
+.DashboardreadonlyBg .jss>thead>tr>td{
+  z-index: 0px!important;
+}
+.jss>tbody>tr>td.readonly>input[type=checkbox], .jss>tbody>tr>td.readonly>input[type=radio] {
+  pointer-events: none;
+  opacity: 1.5!important;
+ 
+}
+@media (max-width: 768px) {
+  .dashboardTable2 .jss_content {
+      height: 238px;
+  }
+}
+
+@media (min-width: 769px) {
+  .dashboardTable2 .jss_content {
+      // max-height: calc(100vh - 412px); /* Full height for larger screens */
+      height: 250px;
+  }
 }
