--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17869,7 +17869,7 @@ label.arrow_label:before {
   padding: 0 10px; /* Optional padding */
   overflow: hidden;
   border: 1px solid #aaa;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+  // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
   background: #FFFFFF;
 }
@@ -17899,7 +17899,7 @@ label.arrow_label:before {
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 10px;
-  box-shadow: 0px 1px 2px 0px rgba(15, 22, 36, 0.06), 0px 1px 3px 0px rgba(15, 22, 36, 0.1) !important;
+  // box-shadow: 0px 1px 2px 0px rgba(15, 22, 36, 0.06), 0px 1px 3px 0px rgba(15, 22, 36, 0.1) !important;
   
 }
 
