commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -18176,11 +18176,16 @@ label.arrow_label:before {
 }
 }
 
-@media only screen
-and (min-width: 1370px)
-and (max-width: 1605px)
-{ 
-  .dashboardTable2 .jss_content {
-    height: 222px;
-}
- }
+// @media only screen
+// and (min-width: 1370px)
+// and (max-width: 1605px)
+// { 
+//   .dashboardTable2 .jss_content {
+//     height: 222px;
+// }
+//  }
+//  @media  screen and ((min-width: 992px)) {
+//   .dashboardTable2 .jss_content {
+//     height: 235px;
+// }
+// }
