--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4174,7 +4174,7 @@ label.arrow_label:after {
 // .TableColorL td{
 //   color: #000;
 // }
-}
+// }
 
 .MarginTopfieldsupply {
   margin-top: -5px;
