--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -18114,3 +18114,12 @@ label.arrow_label:before {
   font-size: 12px !important;
   margin-bottom: 1%;
 }
+.dashboardTable2E>div .jss_filters {
+  top: -150px !important;
+}
+.dashboardTable3>div .jss_filters {
+  top: -50px !important;
+}
+.dashboardTable2>div .jss_filters {
+  top: -100px !important;
+}
