--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -7465,7 +7465,7 @@ h6 {
   // float: left !important;
   // width: 50%;
   visibility: hidden;
-  height: 90px;
+  height: 84px;
   // margin-top: -17%;
 }
 
@@ -17434,7 +17434,7 @@ label.arrow_label:before {
   overflow: auto;
 }
 .dashboardTable2E .jss_content {
-  height: 153px;
+  height: 145px;
   max-height: calc(100vh - 100%) !important;
     overflow: auto;
 }
@@ -18076,7 +18076,7 @@ label.arrow_label:before {
   top:-2px!important;
 }
 .Dashboardticker .CardHeight{
-  height: 90px;
+  height: 84px;
   background-color: #A7C6ED;
 }
 .Dashboardticker .CardHeight .card-body .card-title{
@@ -18105,7 +18105,7 @@ label.arrow_label:before {
   margin-top: 1%;
 }
 .TextContTicker p {
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
   color: #212721;
 }
@@ -18113,6 +18113,7 @@ label.arrow_label:before {
   color: #000000 !important;
   font-size: 12px !important;
   margin-bottom: 1%;
+  font-weight: 500;
 }
 .dashboardTable2E>div .jss_filters {
   top: -150px !important;
